Section two finished. --ChufanLai

--- a/papers/PC_Perception.bib
+++ b/papers/PC_Perception.bib
@@ -8,6 +8,7 @@
   Booktitle                = {VMV},
   Year                     = {2009},
   Pages                    = {341--350},
+
   File                     = {:Quality-based visualization matrices.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -37,6 +38,7 @@
   Organization             = {Wiley Online Library},
   Pages                    = {793--802},
   Volume                   = {29},
+
   File                     = {:Evaluation of cluster iden- tification performance for different PCP variants.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -50,6 +52,7 @@
   Number                   = {2},
   Pages                    = {152--162},
   Volume                   = {7},
+
   File                     = {:Perceiving patterns in parallel coordinates\: determining thresh- olds for identification of relationships.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {SAGE Publications},
@@ -64,6 +67,7 @@
   Number                   = {1},
   Pages                    = {13--30},
   Volume                   = {9},
+
   File                     = {:Judging correlation from scatterplots and parallel coordinate plots.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {SAGE Publications},
@@ -80,6 +84,19 @@
 
   __markedentry            = {[chufanlai:]},
   File                     = {:Visual perception of parallel coordinate visualizations.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.04.08}
+}
+
+@InProceedings{tatu2009combining,
+  Title                    = {Combining automated analysis and visualization techniques for effective exploration of high-dimensional data},
+  Author                   = {Tatu, Andrada and Albuquerque, Georgia and Eisemann, Martin and Schneidewind, J{\"o}rn and Theisel, Holger and Magnor, Marcus and Keim, Daniel},
+  Booktitle                = {Visual Analytics Science and Technology, 2009. VAST 2009. IEEE Symposium on},
+  Year                     = {2009},
+  Organization             = {IEEE},
+  Pages                    = {59--66},
+
+  File                     = {:Combining automated analysis and visualization techniques for effective exploration of high-dimensional data.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
 }
