--- a/papers/PC_Survey.bib
+++ b/papers/PC_Survey.bib
@@ -2,6 +2,20 @@
 % Encoding: UTF-8
 
 
+@Article{bertini2011quality,
+  Title                    = {Quality metrics in high-dimensional data visualization: an overview and systematization},
+  Author                   = {Bertini, Enrico and Tatu, Andrada and Keim, Daniel},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2011},
+  Number                   = {12},
+  Pages                    = {2203--2212},
+  Volume                   = {17},
+
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.28}
+}
+
 @InProceedings{grinstein2001high,
   Title                    = {High-dimensional visualizations},
   Author                   = {Grinstein, Georges and Trutschl, Marjan and Cvek, Urska},
@@ -22,7 +36,6 @@
   Pages                    = {95--116},
   Volume                   = {2013},
 
-  __markedentry            = {},
   File                     = {:State of the art of parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.06}
@@ -61,6 +74,7 @@
   Year                     = {1990},
   Month                    = {Oct},
   Pages                    = {361-378},
+
   Doi                      = {10.1109/VISUAL.1990.146402},
   File                     = {:Parallel coordinates\: a tool for visualizing multi-dimensional geometry.pdf:PDF},
   Keywords                 = {computational geometry;computer graphics;N-dimensional;hypersurface;interior point;multivariate data;nonprojective mapping;parallel coordinates;planar images;two-dimensional sets;visualizing multi-dimensional geometry;Air traffic control;Application software;Computational geometry;Computer displays;Computer science;Orbital robotics;Robot kinematics;Robot vision systems;Statistics;Visualization},
@@ -76,6 +90,7 @@
   Number                   = {6},
   Pages                    = {1278--1309},
   Volume                   = {18},
+
   File                     = {:Interacting with parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {Oxford University Press},
@@ -98,6 +113,7 @@
 @InProceedings{wong199430,
   Title                    = {30 Years of Multidimensional Multivariate Visualization.},
   Author                   = {Wong, Pak Chung and Bergeron, R Daniel},
+
   File                     = {:30 Years of Multidimensional Multivariate Visualization.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
