--- a/survey/parallelcoordinates.bib
+++ b/survey/parallelcoordinates.bib
@@ -9,10 +9,24 @@
   Year                     = {2009},
   Pages                    = {341--350},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Quality-based visualization matrices.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
+}
+
+@InProceedings{ankerst1998similarity,
+  Title                    = {Similarity clustering of dimensions for an enhanced visualization of multidimensional data},
+  Author                   = {Ankerst, Mihael and Berchtold, Stefan and Keim, Daniel A},
+  Booktitle                = {Information Visualization, 1998. Proceedings. IEEE Symposium on},
+  Year                     = {1998},
+  Organization             = {IEEE},
+  Pages                    = {52--60},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:Similarity Clustering of Dimensions for an enhanced visualization of multidimensional data.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.04.27}
 }
 
 @InProceedings{artero2004uncovering,
@@ -23,7 +37,7 @@
   Organization             = {IEEE},
   Pages                    = {81--88},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Uncovering clusters in crowded parallel coordinates visualizations.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -37,7 +51,7 @@
   Organization             = {IEEE},
   Pages                    = {725--730},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Animator\: A Tool for the Animation of Parallel Coordinates .pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -48,6 +62,7 @@
   Author                   = {Bellman, Richard Ernest and Dreyfus, Stuart E},
   Year                     = {1962},
 
+  __markedentry            = {[chufanlai:5]},
   Owner                    = {chufanlai},
   Publisher                = {Rand Corporation},
   Timestamp                = {2015.04.09}
@@ -61,7 +76,7 @@
   Organization             = {IEEE},
   Pages                    = {133--140},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Parallel sets\: Visual analysis of categorical data.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -77,10 +92,26 @@
   Pages                    = {911--920},
   Volume                   = {30},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Uncertainty-aware exploration of continuous parameter spaces using multivariate prediction.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
+}
+
+@Article{bertini2011quality,
+  Title                    = {Quality metrics in high-dimensional data visualization: an overview and systematization},
+  Author                   = {Bertini, Enrico and Tatu, Andrada and Keim, Daniel},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2011},
+  Number                   = {12},
+  Pages                    = {2203--2212},
+  Volume                   = {17},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:Quality Metrics in High-Dimensional Data Visualization\: An Overview and Systematization.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.28}
 }
 
 @Article{blaas2008extensions,
@@ -92,7 +123,7 @@
   Pages                    = {1436--1451},
   Volume                   = {14},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Extensions of parallel coordinates for interactive exploration of large multi-timepoint data sets.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -108,7 +139,7 @@
   Pages                    = {70--79},
   Volume                   = {13},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Design and evaluation of tiled parallel coordinate visualization of multichannel EEG data.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -124,7 +155,7 @@
   Pages                    = {2310--2316},
   Volume                   = {17},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:5]},
   File                     = {:Flexible linked axes for multivariate data visualization.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -137,6 +168,7 @@
   Publisher                = {CRC Press, Inc.},
   Year                     = {1988},
 
+  __markedentry            = {[chufanlai:3]},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
 }
@@ -149,7 +181,7 @@
   Organization             = {IEEE},
   Pages                    = {91--98},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Parallel Coordinates tag clouds to explore and analyze faceted text corpora.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -164,7 +196,7 @@
   Pages                    = {1044--1052},
   Volume                   = {16},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Stacking Graphic Elements to Avoid Over-Plotting.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -181,7 +213,7 @@
   Pages                    = {1015--1024},
   Volume                   = {31},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Conceptualizing visual uncertainty in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -196,10 +228,27 @@
   Pages                    = {2241--2248},
   Volume                   = {17},
 
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Adaptive privacy-preserving visualization using parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
   Timestamp                = {2015.04.10}
+}
+
+@Article{dasgupta2010pargnostics,
+  Title                    = {Pargnostics: Screen-space metrics for parallel coordinates},
+  Author                   = {Dasgupta, Aritra and Kosara, Robert},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2010},
+  Number                   = {6},
+  Pages                    = {1017--1026},
+  Volume                   = {16},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:Pargnostics\: Screen-space metrics for parallel coordinates.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.26}
 }
 
 @Article{ellis2006enabling,
@@ -211,7 +260,7 @@
   Pages                    = {717--724},
   Volume                   = {12},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Enabling automatic clutter reduction in parallel coordinate plots.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -226,7 +275,7 @@
   Organization             = {IEEE},
   Pages                    = {149--156},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:5]},
   File                     = {:An interactive 3D integration of parallel coordinates and star glyphs.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -241,7 +290,7 @@
   Pages                    = {980--989},
   Volume                   = {16},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Matching visual saliency to confidence in plots of uncertain data.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -258,7 +307,7 @@
   Pages                    = {1121--1130},
   Volume                   = {30},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Visualizing high-dimensional structures by dimension ordering and filtering using subspace analysis.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -269,6 +318,7 @@
   Author                   = {Fodor, Imola K},
   Year                     = {2002},
 
+  __markedentry            = {[chufanlai:3]},
   File                     = {:A survey of dimension reduction techniques.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
@@ -283,7 +333,7 @@
   Pages                    = {150--159},
   Volume                   = {6},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:5]},
   File                     = {:Structure-based brushes\: a mechanism for navigating hierarchically organized data and information spaces.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -298,7 +348,7 @@
   Organization             = {IEEE Computer Society Press},
   Pages                    = {43--50},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Hierarchical parallel coordinates for exploration of large datasets.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -312,7 +362,7 @@
   Organization             = {IEEE},
   Pages                    = {58--64},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Hierarchical parallel coordinates for exploration of large datasets.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -327,7 +377,7 @@
   Pages                    = {2572--2580},
   Volume                   = {17},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Angular histograms\: Frequency-based visualiza- tions for large, high dimensional data.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -342,7 +392,7 @@
   Organization             = {IEEE},
   Pages                    = {10--16},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Using curves to enhance parallel coordinate visualisations.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -355,6 +405,7 @@
   Year                     = {2001},
   Pages                    = {7--19},
 
+  __markedentry            = {[chufanlai:1]},
   File                     = {:High-dimensional visualizations.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
@@ -368,7 +419,7 @@
   Organization             = {IEEE},
   Pages                    = {163--170},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:TripVista\: triple perspective visual trajectory analytics and its ap- plication on microscopic traffic data at a road intersection.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -382,7 +433,7 @@
   Organization             = {IEEE},
   Pages                    = {19--26},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Multi-dimensional transfer function design based on flexible dimension projection embedded in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -396,7 +447,7 @@
   Organization             = {IEEE},
   Pages                    = {97--104},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Interactive local clustering operations for high dimensional data in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -410,7 +461,7 @@
   Organization             = {IEEE},
   Pages                    = {127--130},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Angular brushing of extended parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -426,7 +477,7 @@
   Pages                    = {653--662},
   Volume                   = {30},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:5]},
   File                     = {:Progressive splatting of continuous scatterplots and parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -438,7 +489,7 @@
   Journal                  = {arXiv preprint arXiv:1109.6073},
   Year                     = {2011},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Evaluation of a bundling technique for parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -451,7 +502,7 @@
   Year                     = {2012},
   Pages                    = {37--41},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:The parallel coordinates matrix.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -465,7 +516,7 @@
   Pages                    = {95--116},
   Volume                   = {2013},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:State of the art of parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.06}
@@ -480,7 +531,7 @@
   Pages                    = {1531--1538},
   Volume                   = {15},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Continuous parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -495,6 +546,7 @@
   Organization             = {ACM},
   Pages                    = {9--16},
 
+  __markedentry            = {[chufanlai:3]},
   File                     = {:Dimensional anchors\: a graphic primitive for multidimensional multivariate information visualizations.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
@@ -510,7 +562,7 @@
   Pages                    = {793--802},
   Volume                   = {29},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Evaluation of cluster iden- tification performance for different PCP variants.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -522,6 +574,7 @@
   Publisher                = {Springer},
   Year                     = {2009},
 
+  __markedentry            = {[chufanlai:1]},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.22}
 }
@@ -535,7 +588,7 @@
   Pages                    = {69--91},
   Volume                   = {1},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:The plane with parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {Springer},
@@ -550,7 +603,7 @@
   Month                    = {Oct},
   Pages                    = {361-378},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   Doi                      = {10.1109/VISUAL.1990.146402},
   File                     = {:Parallel coordinates\: a tool for visualizing multi-dimensional geometry.pdf:PDF},
   Keywords                 = {computational geometry;computer graphics;N-dimensional;hypersurface;interior point;multivariate data;nonprojective mapping;parallel coordinates;planar images;two-dimensional sets;visualizing multi-dimensional geometry;Air traffic control;Application software;Computational geometry;Computer displays;Computer science;Orbital robotics;Robot kinematics;Robot vision systems;Statistics;Visualization},
@@ -568,7 +621,7 @@
   Pages                    = {1039--1046},
   Volume                   = {27},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:A screen space quality method for data abstraction.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -582,7 +635,7 @@
   Organization             = {IEEE},
   Pages                    = {188--193},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:3-dimensional display for clustered multi-relational parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -597,7 +650,7 @@
   Pages                    = {152--162},
   Volume                   = {7},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Perceiving patterns in parallel coordinates\: determining thresh- olds for identification of relationships.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {SAGE Publications},
@@ -612,7 +665,7 @@
   Pages                    = {35--42},
   Volume                   = {7},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Depth cues and density in temporal parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -626,7 +679,7 @@
   Organization             = {IEEE},
   Pages                    = {125--132},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Revealing structure within clustered parallel coordinates displays.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -641,6 +694,7 @@
   Pages                    = {993--1000},
   Volume                   = {15},
 
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Interactive Dimensionality Reduction Through User-defined.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -655,6 +709,7 @@
   Pages                    = {22},
   Volume                   = {650},
 
+  __markedentry            = {[chufanlai:3]},
   File                     = {:Star coordinates\: A multi-dimensional visualization technique with uniform treatment of dimensions.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
@@ -669,7 +724,7 @@
   Pages                    = {558--568},
   Volume                   = {12},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Parallel sets\: Interactive exploration and visual analysis of categorical data.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -685,6 +740,7 @@
   Pages                    = {351--364},
   Volume                   = {20},
 
+  __markedentry            = {[chufanlai:5]},
   File                     = {:A Structure-Based Distance Metric for High-Dimensional Space Exploration with Multidimensional Scaling.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -700,7 +756,7 @@
   Pages                    = {1912--1921},
   Volume                   = {17},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Features in continuous parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -716,7 +772,7 @@
   Pages                    = {13--30},
   Volume                   = {9},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Judging correlation from scatterplots and parallel coordinate plots.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {SAGE Publications},
@@ -731,10 +787,24 @@
   Organization             = {IEEE},
   Pages                    = {25--31},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:5]},
   File                     = {:Many-to-many relational parallel coordinates displays.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
+}
+
+@InProceedings{martin1995high,
+  Title                    = {High dimensional brushing for interactive exploration of multivariate data},
+  Author                   = {Martin, Allen R and Ward, Matthew O},
+  Booktitle                = {Proceedings of the 6th Conference on Visualization'95},
+  Year                     = {1995},
+  Organization             = {IEEE Computer Society},
+  Pages                    = {271},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:High dimensional brushing for interactive exploration of multivariate data.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.04.28}
 }
 
 @InProceedings{mcdonnell2008illustrative,
@@ -747,7 +817,7 @@
   Pages                    = {1031--1038},
   Volume                   = {27},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Illustrative parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -760,6 +830,7 @@
   Year                     = {2002},
   Pages                    = {41--48},
 
+  __markedentry            = {[chufanlai:5]},
   File                     = {:On some generalizations of parallel coordinate plots.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
@@ -775,7 +846,7 @@
   Pages                    = {643--652},
   Volume                   = {30},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Visual Coherence for Large‐Scale Line‐Plot Visualizations.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -790,7 +861,7 @@
   Pages                    = {893--900},
   Volume                   = {12},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Outlier-preserving focus+ context visualization in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -805,6 +876,7 @@
   Organization             = {IEEE},
   Pages                    = {57--64},
 
+  __markedentry            = {[chufanlai:1]},
   File                     = {:An edge-bundling layout for interactive parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
@@ -818,7 +890,7 @@
   Organization             = {IEEE},
   Pages                    = {89--96},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Clutter reduction in multi-dimensional data visualization using dimension reordering.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -833,11 +905,27 @@
   Pages                    = {1408--1415},
   Volume                   = {13},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Visual analysis of the air pollution problem in Hong Kong.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
   Timestamp                = {2015.04.08}
+}
+
+@Article{rosario2004mapping,
+  Title                    = {Mapping nominal values to numbers for effective visualization},
+  Author                   = {Rosario, Geraldine E and Rundensteiner, Elke A and Brown, David C and Ward, Matthew O and Huang, Shiping},
+  Journal                  = {Information Visualization},
+  Year                     = {2004},
+  Number                   = {2},
+  Pages                    = {80--95},
+  Volume                   = {3},
+
+  __markedentry            = {[chufanlai:5]},
+  File                     = {:Mapping Nominal Values to Numbers for Effective Visualization.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {SAGE Publications},
+  Timestamp                = {2015.04.26}
 }
 
 @InProceedings{rosenbaum2012progressive,
@@ -848,7 +936,7 @@
   Organization             = {IEEE},
   Pages                    = {25--32},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:5]},
   File                     = {:Progressive parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -862,7 +950,7 @@
   Organization             = {IEEE},
   Pages                    = {373--378},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Direct manipulation of parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -876,7 +964,7 @@
   Organization             = {IEEE},
   Pages                    = {3--9},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Visual perception of parallel coordinate visualizations.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -891,7 +979,7 @@
   Pages                    = {1278--1309},
   Volume                   = {18},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Interacting with parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {Oxford University Press},
@@ -907,7 +995,7 @@
   Pages                    = {584--597},
   Volume                   = {17},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Automated analytical methods to support visual exploration of high-dimensional data.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -922,7 +1010,7 @@
   Organization             = {IEEE},
   Pages                    = {59--66},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Combining automated analysis and visualization techniques for effective exploration of high-dimensional data.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -937,7 +1025,7 @@
   Pages                    = {71--80},
   Volume                   = {11},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:A parallel coordinates style interface for exploratory volume visualization.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -953,7 +1041,7 @@
   Pages                    = {2591--2599},
   Volume                   = {17},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:5]},
   File                     = {:Brushing dimensions-a dual visual analysis model for high-dimensional data.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -968,6 +1056,7 @@
   Organization             = {IEEE},
   Pages                    = {79--86},
 
+  __markedentry            = {[chufanlai:1]},
   File                     = {:The Value of Visualization.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.22}
@@ -982,17 +1071,34 @@
   Pages                    = {1100--1108},
   Volume                   = {16},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:5]},
   File                     = {:The FlowVizMenu and parallel scatterplot matrix\: Hybrid multidimensional visualizations for network exploration.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
   Timestamp                = {2015.04.08}
 }
 
+@Article{wilkinson2006high,
+  Title                    = {High-dimensional visual analytics: Interactive exploration guided by pairwise views of point distributions},
+  Author                   = {Wilkinson, Leland and Anand, Anushka and Grossman, Robert},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2006},
+  Number                   = {6},
+  Pages                    = {1363--1372},
+  Volume                   = {12},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:High-Dimensional Visual Analytics\: Interactive Exploration Guided by Pairwise Views of Point Distributions.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.27}
+}
+
 @InProceedings{wong199430,
   Title                    = {30 Years of Multidimensional Multivariate Visualization.},
   Author                   = {Wong, Pak Chung and Bergeron, R Daniel},
 
+  __markedentry            = {[chufanlai:1]},
   File                     = {:30 Years of Multidimensional Multivariate Visualization.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
@@ -1006,7 +1112,7 @@
   Organization             = {IEEE},
   Pages                    = {105--112},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Interactive hierarchical dimension ordering, spacing and filtering for exploration of high dimensional datasets.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -1021,7 +1127,7 @@
   Pages                    = {1001--1008},
   Volume                   = {15},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:5]},
   File                     = {:Scattering points in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
@@ -1036,7 +1142,7 @@
   Organization             = {IEEE},
   Pages                    = {17--24},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:A network-based interface for the exploration of high-dimensional data spaces.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -1052,7 +1158,7 @@
   Pages                    = {759--766},
   Volume                   = {28},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Splatting the lines in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -1066,6 +1172,7 @@
   Organization             = {ACM},
   Pages                    = {49},
 
+  __markedentry            = {[chufanlai:5]},
   File                     = {:Parallel Coordinates with Data Labels.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
@@ -1081,7 +1188,7 @@
   Pages                    = {1047--1054},
   Volume                   = {27},
 
-  __markedentry            = {[chufanlai:]},
+  __markedentry            = {[chufanlai:1]},
   File                     = {:Visual clustering in parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
