--- a/papers/PC_AxesOrdering.bib
+++ b/papers/PC_AxesOrdering.bib
@@ -2,6 +2,19 @@
 % Encoding: UTF-8
 
 
+@InProceedings{ankerst1998similarity,
+  Title                    = {Similarity clustering of dimensions for an enhanced visualization of multidimensional data},
+  Author                   = {Ankerst, Mihael and Berchtold, Stefan and Keim, Daniel A},
+  Booktitle                = {Information Visualization, 1998. Proceedings. IEEE Symposium on},
+  Year                     = {1998},
+  Organization             = {IEEE},
+  Pages                    = {52--60},
+
+  File                     = {:Similarity Clustering of Dimensions for an enhanced visualization of multidimensional data.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.04.27}
+}
+
 @InProceedings{ferdosi2011visualizing,
   Title                    = {Visualizing High-Dimensional Structures by Dimension Ordering and Filtering using Subspace Analysis},
   Author                   = {Ferdosi, Bilkis J and Roerdink, Jos BTM},
@@ -38,6 +51,7 @@
   Year                     = {2005},
   Organization             = {IEEE},
   Pages                    = {188--193},
+
   File                     = {:3-dimensional display for clustered multi-relational parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -65,6 +79,7 @@
   Year                     = {2004},
   Organization             = {IEEE},
   Pages                    = {89--96},
+
   File                     = {:Clutter reduction in multi-dimensional data visualization using dimension reordering.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -78,22 +93,26 @@
   Number                   = {5},
   Pages                    = {584--597},
   Volume                   = {17},
+
   File                     = {:Automated analytical methods to support visual exploration of high-dimensional data.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
   Timestamp                = {2015.04.08}
 }
 
-@InProceedings{tatu2009combining,
-  Title                    = {Combining automated analysis and visualization techniques for effective exploration of high-dimensional data},
-  Author                   = {Tatu, Andrada and Albuquerque, Georgia and Eisemann, Martin and Schneidewind, J{\"o}rn and Theisel, Holger and Magnor, Marcus and Keim, Daniel},
-  Booktitle                = {Visual Analytics Science and Technology, 2009. VAST 2009. IEEE Symposium on},
-  Year                     = {2009},
-  Organization             = {IEEE},
-  Pages                    = {59--66},
-  File                     = {:Combining automated analysis and visualization techniques for effective exploration of high-dimensional data.pdf:PDF},
+@Article{wilkinson2006high,
+  Title                    = {High-dimensional visual analytics: Interactive exploration guided by pairwise views of point distributions},
+  Author                   = {Wilkinson, Leland and Anand, Anushka and Grossman, Robert},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2006},
+  Number                   = {6},
+  Pages                    = {1363--1372},
+  Volume                   = {12},
+
+  File                     = {:High-Dimensional Visual Analytics\: Interactive Exploration Guided by Pairwise Views of Point Distributions.pdf:PDF},
   Owner                    = {chufanlai},
-  Timestamp                = {2015.04.08}
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.27}
 }
 
 @InProceedings{yang2003interactive,
@@ -103,6 +122,7 @@
   Year                     = {2003},
   Organization             = {IEEE},
   Pages                    = {105--112},
+
   File                     = {:Interactive hierarchical dimension ordering, spacing and filtering for exploration of high dimensional datasets.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -115,6 +135,7 @@
   Year                     = {2012},
   Organization             = {IEEE},
   Pages                    = {17--24},
+
   File                     = {:A network-based interface for the exploration of high-dimensional data spaces.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
