--- a/papers/PC_Interaction.bib
+++ b/papers/PC_Interaction.bib
@@ -25,6 +25,7 @@
   Year                     = {1999},
   Organization             = {IEEE},
   Pages                    = {58--64},
+
   File                     = {:Hierarchical parallel coordinates for exploration of large datasets.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
@@ -37,9 +38,23 @@
   Year                     = {2002},
   Organization             = {IEEE},
   Pages                    = {127--130},
+
   File                     = {:Angular brushing of extended parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
+}
+
+@InProceedings{martin1995high,
+  Title                    = {High dimensional brushing for interactive exploration of multivariate data},
+  Author                   = {Martin, Allen R and Ward, Matthew O},
+  Booktitle                = {Proceedings of the 6th Conference on Visualization'95},
+  Year                     = {1995},
+  Organization             = {IEEE Computer Society},
+  Pages                    = {271},
+
+  File                     = {:High dimensional brushing for interactive exploration of multivariate data.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.04.28}
 }
 
 @Article{siirtola2006interacting,
@@ -50,6 +65,7 @@
   Number                   = {6},
   Pages                    = {1278--1309},
   Volume                   = {18},
+
   File                     = {:Interacting with parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Publisher                = {Oxford University Press},
